--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
  <div class="container">
   <figure class="user-image">
-  <img src="files/photo-2.jpg" alt="2020">
+  <img src="files/Photo-1.jpg" alt="2020">
 </figure>
 </div>
   <div class="container">
