--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
-    <title>Портфолио Junior верстальщика</title></head>
+    <title>Портфолио</title></head>
 
 
   <body>
@@ -31,10 +31,18 @@
     </section>
     <section class="intro">
       <div class="container">
-      <h2 class="subheading">Давайте познакомимся</h2>
-      <h3>Пара слов о себе</h3>
-      <p>Текст с парой слов о себе.</p>
-      <h3>Чем могу быть полезен</h3>
+      <h1 class="subheading">Давайте познакомимся</h1>
+      <h3>Мне 21 я изучаю программирование!</h3>
+      <b><p>И уже пишу себе Портфолио</p></b>
+      <h3>
+       <ul>
+       <li>Front-end</li>
+       <li>JavaScript разработка</li>
+       <li>React разработка</li>
+       <li>Верстка сайтов</li>
+       <li>Сайт под ключ</li>
+      </ul>
+    </h3>
       <p>Текст о том, чем могу быть полезен.</p>
     </div>
     </section>
